# DODGERS-PORTFOLIO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: job_alignment.md  project_roadmap.md  resume_bullets.md
notebooks/: 01_pitch_shape_clustering.ipynb  02_swing_decision_model.ipynb  03_run_value_engine.ipynb
reports/: pitch_shape_report.md  run_value_report.md  swing_decision_report.md
scripts/: run_project1.sh
src/: __init__.py
src/project1_pitch_shape/: __init__.py  clustering.py  data_pull.py  features.py  main.py  visuals.py
src/project2_swing_decision/: __init__.py  data_pull.py  evaluate.py  features.py  main.py  model.py
src/project3_run_value/: __init__.py  data_pull.py  features.py  main.py  model.py  visuals.py
src/utils/: __init__.py  io.py  metrics.py  paths.py  plotting.py  preprocessing.py
tests/: test_metrics.py  test_preprocessing.py  test_project1_smoke.py
